Substitute REST path or body parameters in Workflow Steps (#525)
* Include params map in WorkflowRequest when provisioning

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Pass params to ProcessNode

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Pass params to WorkflowSteps

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Substitute params

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Add change log

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Improve param consuming checks, add coverage

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Allow specifying key-value pairs in body

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Update title in change log

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Refactor param and content map generation to a new method

Signed-off-by: Daniel Widdis <widdis@gmail.com>

---------

Signed-off-by: Daniel Widdis <widdis@gmail.com>
(cherry picked from commit 3019fb82a9682f647923ece78bc5b9e655e934f1)
Signed-off-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>